--- a/ChaveMestra/android/app/src/main/AndroidManifest.xml
+++ b/ChaveMestra/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.chavemestra">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.keymaster">
 
   <uses-permission android:name="android.permission.INTERNET"/>
   <!-- OPTIONAL PERMISSIONS, REMOVE WHATEVER YOU DO NOT NEED -->
