--- a/ChaveMestra/ios/KeyMaster.xcodeproj/xcshareddata/xcschemes/KeyMaster.xcscheme
+++ b/ChaveMestra/ios/KeyMaster.xcodeproj/xcshareddata/xcschemes/KeyMaster.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ChaveMestra.app"
-               BlueprintName = "ChaveMestra"
-               ReferencedContainer = "container:ChaveMestra.xcodeproj">
+               BuildableName = "KeyMaster.app"
+               BlueprintName = "KeyMaster"
+               ReferencedContainer = "container:KeyMaster.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ChaveMestraTests.xctest"
-               BlueprintName = "ChaveMestraTests"
-               ReferencedContainer = "container:ChaveMestra.xcodeproj">
+               BuildableName = "KeyMasterTests.xctest"
+               BlueprintName = "KeyMasterTests"
+               ReferencedContainer = "container:KeyMaster.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ChaveMestra.app"
-            BlueprintName = "ChaveMestra"
-            ReferencedContainer = "container:ChaveMestra.xcodeproj">
+            BuildableName = "KeyMaster.app"
+            BlueprintName = "KeyMaster"
+            ReferencedContainer = "container:KeyMaster.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ChaveMestra.app"
-            BlueprintName = "ChaveMestra"
-            ReferencedContainer = "container:ChaveMestra.xcodeproj">
+            BuildableName = "KeyMaster.app"
+            BlueprintName = "KeyMaster"
+            ReferencedContainer = "container:KeyMaster.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
