--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -19,6 +19,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-masked-text": "^1.13.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
