--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo-google-fonts/roboto-condensed": "^0.2.2",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
@@ -20,6 +22,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-masked-text": "^1.13.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
