--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -24,6 +24,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
