--- a/ChaveMestra/app.json
+++ b/ChaveMestra/app.json
@@ -5,6 +5,13 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "plugins": [
+      "@react-native-firebase/app"
+    ],
+    "android": {
+      "package": "com.chavemestra",
+      "googleServicesFile":"./google-services.json"
+    }
   }
 }
