--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -25,10 +25,12 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-calendars": "^1.1290.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "rsuite": "^5.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
