Adicionado login com o Google

--- a/ChaveMestra/android/app/build.gradle
+++ b/ChaveMestra/android/app/build.gradle
@@ -291,6 +291,9 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    //Google Login
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0' // <-- add this; newer versions should work too
+
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
