--- a/ChaveMestra/android/build.gradle
+++ b/ChaveMestra/android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
             kotlinVersion = findProperty('android.kotlinVersion')
         }
         frescoVersion = findProperty('expo.frescoVersion') ?: '2.5.0'
+        googlePlayServicesAuthVersion = "19.2.0" // <--- use this version or newer
 
         if (System.properties['os.arch'] == 'aarch64') {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
