--- a/ChaveMestra/ios/Podfile
+++ b/ChaveMestra/ios/Podfile
@@ -55,5 +55,10 @@ target 'KeyMaster' do
     rescue => e
       Pod::UI.warn e
     end
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
   end
 end
