--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -14,17 +14,21 @@
     "@react-native-firebase/app": "^16.3.0",
     "@react-native-firebase/auth": "^16.3.0",
     "@react-native-firebase/firestore": "^16.3.0",
+    "@react-native-google-signin/google-signin": "^8.1.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
+    "expo-modules": "^0.0.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "keystore": "^0.0.2",
     "native-base": "^3.4.19",
+    "package": "^1.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "^0.69.6",
     "react-native-calendars": "^1.1290.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "4.3.1",
