--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.0.0",
     "react-native": "^0.69.6",
     "react-native-calendars": "^1.1290.0",
+    "react-native-fbsdk-next": "^11.0.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
