--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -29,8 +29,9 @@
     "react-native": "^0.69.6",
     "react-native-calendars": "^1.1290.0",
     "react-native-masked-text": "^1.13.0",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.18.7",
     "rsuite": "^5.21.0"
   },
