--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -20,6 +20,7 @@
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
+    "expo-location": "~14.3.0",
     "expo-modules": "^0.0.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -31,11 +32,12 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-fbsdk-next": "^11.0.1",
+    "react-native-maps": "^1.3.2",
     "react-native-masked-text": "^1.13.0",
+    "react-native-open-maps": "^0.4.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^12.1.1",
-    "react-native-web": "~0.18.7",
     "rsuite": "^5.21.0"
   },
   "devDependencies": {
