--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -17,6 +17,7 @@
     "@react-native-google-signin/google-signin": "^8.1.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "cors": "^2.8.5",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
@@ -24,6 +25,7 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "native-base": "^3.4.20",
+    "nodemailer": "^6.8.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "^0.69.6",
