--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -17,6 +17,7 @@
     "@react-native-google-signin/google-signin": "^8.1.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.1.3",
     "cors": "^2.8.5",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
