--- a/ChaveMestra/package.json
+++ b/ChaveMestra/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo-google-fonts/roboto-condensed": "^0.2.2",
+    "@react-native-community/geolocation": "^3.0.3",
     "@react-native-firebase/app": "^16.3.0",
     "@react-native-firebase/auth": "^16.3.0",
     "@react-native-firebase/firestore": "^16.3.0",
